--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
         <h1 align="center">The GitHub Game Off 2012  entries viewer</h1>
+        <h3 id="counter" align="center"></h3>
         <div id="lovely-things-list">
             <div id="forks-list">
                 <input size="50" class="search" /><br><br>
